--- a/libs/client-web/cart/ui/src/lib/order-process-detail-element/order-process-detail-element.component.html
+++ b/libs/client-web/cart/ui/src/lib/order-process-detail-element/order-process-detail-element.component.html
@@ -1,7 +1,7 @@
 <button
   (click)="clickEvent.emit(value())"
   class="flex items-center justify-between p-4 rounded-base border border-transparent bg-surface-100 dark:bg-surface-950 w-full"
-  [ngClass]="{ 'border-primary': isActive() }"
+  [ngClass]="{ 'border-primary-400': isActive() }"
 >
   <label [for]="value()" class="flex items-center text-lg gap-4">
     <ng-content />
