--- a/libs/client-web/account/ui/src/lib/order/order.component.html
+++ b/libs/client-web/account/ui/src/lib/order/order.component.html
@@ -69,7 +69,7 @@
     <div class="flex flex-col gap-6">
       <span class="text-xl">Payment method</span>
       <span class="text-muted-color">
-        {{ orderDetails()?.paymentDetails?.provider }}
+        {{ orderDetails()?.paymentDetails?.method }}
       </span>
     </div>
   </div>
