--- a/libs/client-web/cart/feature/order-process/src/lib/delivery-address/delivery-address.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/delivery-address/delivery-address.component.html
@@ -1,5 +1,5 @@
 <lib-section-wrapper header="Address information">
-  @if (loading() && !this.userAddress()) {
+  @if (loading() && !addresses().length) {
     <div class="loading">
       <div class="loading__row">
         <p-skeleton width="10rem" height="2rem" />
@@ -16,42 +16,39 @@
     </div>
   } @else if (error()) {
     <div>{{ error() }}</div>
-  }
-  @if (userAddress() && !formType() && !loading()) {
-    <div class="delivery-address__wrapper">
-      <span class="delivery-address__wrapper__title">Phone</span>
-      <span class="delivery-address__wrapper__content">{{
-        userAddress()?.phone
-      }}</span>
-    </div>
-    <div class="delivery-address__wrapper">
-      <span class="delivery-address__wrapper__title">Name</span>
-      <span class="delivery-address__wrapper__content">
-        {{ userAddress()?.firstName }}
-        {{ userAddress()?.lastName }}
-      </span>
-    </div>
-    <div class="delivery-address__wrapper">
-      <span class="delivery-address__wrapper__title">Address</span>
-      <div class="container">
+  } @else {
+    @for (address of addresses(); track address.id) {
+      <div class="delivery-address__wrapper">
+        <span class="delivery-address__wrapper__title">Phone</span>
+        <span class="delivery-address__wrapper__content">{{
+          address?.phone
+        }}</span>
+      </div>
+      <div class="delivery-address__wrapper">
+        <span class="delivery-address__wrapper__title">Name</span>
         <span class="delivery-address__wrapper__content">
-          {{ userAddress()?.street }}
-          {{ userAddress()?.homeNumber }}
-          {{
-            userAddress()?.houseNumber ? '/ ' + userAddress()?.houseNumber : ''
-          }}, {{ userAddress()?.postcode }}, {{ userAddress()?.city }},
-          {{ userAddress()?.country?.name }}
+          {{ address?.firstName }}
+          {{ address?.lastName }}
         </span>
       </div>
-    </div>
-    <p-button
-      [outlined]="true"
-      class="delivery-address__update-button"
-      label="Update"
-      (onClick)="updateDeliveryAddress()"
-    />
-  }
-  @if ((!userAddress() || !!formType()) && !loading()) {
-    <lib-user-address-form [(formType)]="formType" />
+      <div class="delivery-address__wrapper">
+        <span class="delivery-address__wrapper__title">Address</span>
+        <div class="container">
+          <span class="delivery-address__wrapper__content">
+            {{ address?.street }}
+            {{ address?.homeNumber }}
+            {{ address?.houseNumber ? '/ ' + address?.houseNumber : '' }},
+            {{ address?.postcode }}, {{ address?.city }},
+            {{ address?.country?.name }}
+          </span>
+        </div>
+      </div>
+      <p-button
+        [outlined]="true"
+        class="delivery-address__update-button"
+        label="Update"
+        (onClick)="updateDeliveryAddress()"
+      />
+    }
   }
 </lib-section-wrapper>
