--- a/libs/client-web/cart/feature/order-process/src/lib/payment-method/payment-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/payment-method/payment-method.component.html
@@ -4,27 +4,33 @@
     <p-skeleton width="100%" height="3rem" />
     <p-skeleton width="100%" height="3rem" />
   } @else {
-    <lib-order-process-detail-element
-      [price]="0"
-      [value]="payments()[0]"
+    <button
+      libOrderProccessItem
       [isActive]="selectedPaymentMethod() === payments()[0]"
-      (clickEvent)="selectPaymentMethod($event)"
+      (click)="selectPaymentMethod(payments()[0])"
     >
-      <span class="pi pi-credit-card"></span>
-    </lib-order-process-detail-element>
+      <span class="flex items-center text-lg gap-4">
+        <span class="pi pi-credit-card"></span>
+        <span>{{ payments()[0] }}</span>
+      </span>
+      <span class="">Free</span>
+    </button>
 
     @if (selectedPaymentMethod() === debitCard) {
       <lib-credit-card-form />
     }
 
-    <lib-order-process-detail-element
-      [price]="0"
-      [value]="payments()[1]"
+    <button
+      libOrderProccessItem
       [isActive]="selectedPaymentMethod() === payments()[1]"
-      (clickEvent)="selectPaymentMethod($event)"
+      (click)="selectPaymentMethod(payments()[1])"
     >
-      <span class="pi pi-wallet"></span>
-    </lib-order-process-detail-element>
+      <span class="flex items-center text-lg gap-4">
+        <span class="pi pi-wallet"></span>
+        <span>{{ payments()[1] }}</span>
+      </span>
+      <span class="">Free</span>
+    </button>
     @if (selectedPaymentMethod() === sixDigitCode) {
       <lib-six-digit-code-form />
     }
