--- a/libs/client-web/cart/feature/order-process/src/lib/summary/summary.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/summary/summary.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-base">
   <div class="flex flex-col gap-base">
-    <lib-delivery-address (isUpdatingEvent)="setDeliveryAddressState($event)" />
+    <lib-delivery-address />
     <lib-shipping-method />
     <lib-payment-method [submitted]="submitted()" />
   </div>
