--- a/libs/client-web/cart/ui/src/lib/order-process-detail-element/order-process-detail-element.component.html
+++ b/libs/client-web/cart/ui/src/lib/order-process-detail-element/order-process-detail-element.component.html
@@ -1,13 +1,8 @@
-<button
-  (click)="clickEvent.emit(value())"
-  class="flex items-center justify-between p-4 rounded-base border border-transparent bg-surface-100 dark:bg-surface-950 w-full"
-  [ngClass]="{ 'border-primary-400': isActive() }"
->
-  <label [for]="value()" class="flex items-center text-lg gap-4">
-    <ng-content />
-    <span>{{ label() ?? value() }}</span>
-  </label>
-  <span class="">
-    {{ price() === 0 ? 'Free' : (price() | currency: 'USD') }}
-  </span>
-</button>
+<!-- <label [for]="value()" class="flex items-center text-lg gap-4 cursor-pointer"> -->
+<!--   <ng-content /> -->
+<!--   <span>{{ label() ?? value() }}</span> -->
+<!-- </label> -->
+<!-- <span class=""> -->
+<!--   {{ price() === 0 ? 'Free' : (price() | currency: 'USD') }} -->
+<!-- </span> -->
+<ng-content />
