--- a/libs/client-web/cart/feature/order-process/src/lib/components/summary/summary.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/summary/summary.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-col gap-base">
     <lib-delivery-address />
     <lib-shipping-method />
-    <lib-payment-method [submitted]="submitted()" />
+    <lib-payment-method />
   </div>
 
   <div class="bg-content-background p-4 rounded-base gap-4">
