--- a/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
@@ -1,13 +1,14 @@
 <lib-section-wrapper header="Payment method">
   @if (loading()) {
-    <p-skeleton width="100%" height="3rem" />
-    <p-skeleton width="100%" height="3rem" />
-    <p-skeleton width="100%" height="3rem" />
+    <p-skeleton libOrderProccessItem width="100%" height="3rem" />
+    <p-skeleton libOrderProccessItem width="100%" height="3rem" />
+    <p-skeleton libOrderProccessItem width="100%" height="3rem" />
   } @else {
     <button
       libOrderProccessItem
       [isActive]="selectedPaymentMethod() === payments()[0]"
       (click)="selectPaymentMethod(payments()[0])"
+      class="flex items-center justify-between gap-4"
     >
       <span class="flex items-center text-lg gap-4">
         <span class="pi pi-credit-card"></span>
@@ -24,6 +25,7 @@
       libOrderProccessItem
       [isActive]="selectedPaymentMethod() === payments()[1]"
       (click)="selectPaymentMethod(payments()[1])"
+      class="flex items-center justify-between gap-4"
     >
       <span class="flex items-center text-lg gap-4">
         <span class="pi pi-wallet"></span>
