--- a/libs/client-web/cart/feature/order-process/src/lib/components/shipping-method/shipping-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/shipping-method/shipping-method.component.html
@@ -1,8 +1,8 @@
 <lib-section-wrapper header="Shipping">
-  <div class="shipping-method__container">
+  <div class="flex flex-col gap-4">
     @if (loading()) {
-      <p-skeleton width="100%" height="3rem" />
-      <p-skeleton width="100%" height="3rem" />
+      <p-skeleton libOrderProccessItem width="100%" height="3rem" />
+      <p-skeleton libOrderProccessItem width="100%" height="3rem" />
     } @else if (error()) {
       <div>{{ error() }}</div>
     } @else if (shippings().length > 0) {
@@ -11,6 +11,7 @@
           libOrderProccessItem
           [isActive]="selectedShipping()?.id === shipping.id"
           (click)="selectShipping(shipping)"
+          class="flex items-center justify-between gap-4"
         >
           <span class="flex items-center text-lg gap-4">
             <span class="pi pi-truck"></span>
