Improved user endpoint in swagger and created new lib tag api

--- a/libs/client-web/account/feature/information/src/lib/components/new-password-form/new-password-form.component.html
+++ b/libs/client-web/account/feature/information/src/lib/components/new-password-form/new-password-form.component.html
@@ -36,11 +36,17 @@
       label="Cancel"
       (onClick)="setEditingField(null)"
     />
-    <p-button
-      type="submit"
-      severity="secondary"
-      styleClass="w-full"
-      label="Save"
-    />
+    <div
+      [pTooltip]="form.invalid ? 'Form is invalid' : ''"
+      tooltipPosition="top"
+    >
+      <p-button
+        type="submit"
+        [disabled]="form.invalid"
+        severity="secondary"
+        styleClass="w-full"
+        label="Save"
+      />
+    </div>
   </div>
 </form>
